--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,11 @@
 version: "3"
 
 services:
-  app:
-    container_name: discord-chatgpt-ai-assistant
-    build: .
+  ai-discord-bot:
+    image: jp0id/ai-discord-bot:latest
     restart: always
-    ports:
-      - "${APP_PORT}:${APP_PORT}"
+    environment:
+      DISCORD_TOKEN: MTEccccxxxxwMA.xxxxxx
+      OPENAI_MODEL_ENGINE: gpt-3.5-turbo
+      OPENAI_API: xxxxx-xxxxx
+      BASE_URL: https://xx/com/api/v123
